fix:improve color contrast in language dropdown

--- a/src/app/components/LanguageDropdown/LanguageDropdown.scss
+++ b/src/app/components/LanguageDropdown/LanguageDropdown.scss
@@ -87,7 +87,7 @@
         text-align: left;
         font-family: inherit;
         font-size: inherit;
-        color:var(--primary-accessible);
+        color:inherit;
 
         &:hover {
           color: var(--grey-dark);
